<resources>
    <string name="app_name">脸勤</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="user_setting">用户</string>
    <string name="account_safe_setting">账号安全</string>
    <string name="account_summary_setting">查看相关账号信息</string>
    <string name="bind_phone_setting">绑定手机号</string>
    <string name="bind_phone_summary_setting">点击绑定您的手机号码</string>
    <string name="bind_phone_tips">请输入您的手机号码</string>
    <string name="bind_email_setting">绑定邮箱</string>
    <string name="bind_email_summary_setting">点击绑定您的邮箱号</string>
    <string name="bind_email_tips">请输入您的邮箱</string>

    <string name="about_setting">关于</string>
    <string name="about_lianqin_setting">关于脸勤</string>
    <string name="about_user_suggest_setting">意见反馈</string>

    <string name="more_setting">更多</string>
    <string name="check_update_setting">检查更新</string>
    <string name="clear_setting">清除缓存</string>

    <string name="teacher">教师名字</string>
    <string name="choose_bj">选择班级</string>
    <string name="recognize">请将方框对准人脸</string>
    <string name="recognizing">检测中</string>
    <string name="camera_menu">考勤</string>

    <string name="id_tips">（请输入学号）</string>

    <string name="private_broadcast">个人消息</string>
    <string name="public_broadcast">系统通知</string>

    <string name="note_tips">没有记录哦，赶快写一个吧！</string>
    <string name="note_title">备忘录</string>

    <string name="record_details_title_top_left">累计记录：</string>
    <string name="record_details_title_top_right">已上堂数：</string>
    <string name="record_details_title_bottom_left">缺勤人次：</string>
    <string name="record_details_title_bottom_center">迟到人次：</string>
    <string name="record_details_title_bottom_right">请假人次：</string>
    <string name="record_details_top_right">班级人数：</string>
    <string name="record_details_bottom_left">出勤：</string>
    <string name="record_details_bottom_left_center">缺勤：</string>
    <string name="record_details_bottom_right_center">迟到：</string>
    <string name="record_details_bottom_right">请假：</string>
    <string name="record_details_button">详情</string>
    
    <string name="class_details_top">班级人数:</string>
</resources>
