<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/cardview"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="0dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <RelativeLayout
            android:layout_gravity="top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">
            <TextView
                android:id="@+id/record_time"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="2017-08-05"/>
            <TextView
                android:id="@+id/record_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                tools:text="第5周"/>
            <TextView
                android:id="@+id/number_class"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="66"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/number_class"
                android:text="@string/record_details_top_right"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/record_details_bottom_left"/>
                <TextView
                    android:id="@+id/chuqin"
                    android:layout_width="wrap_content"
                    android:gravity="start"
                    android:layout_height="wrap_content"
                    tools:text="55次"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/record_details_bottom_left_center"/>
                <TextView
                    android:id="@+id/queqin"
                    android:layout_width="wrap_content"
                    android:gravity="start"
                    android:layout_height="wrap_content"
                    tools:text="6次"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/record_details_bottom_right"/>
                <TextView
                    android:id="@+id/qinjia"
                    android:layout_width="wrap_content"
                    android:gravity="start"
                    android:layout_height="wrap_content"
                    tools:text="4次"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/record_details_bottom_right_center"/>
                <TextView
                    android:id="@+id/chidao"
                    android:layout_width="wrap_content"
                    android:gravity="start"
                    android:layout_height="wrap_content"
                    tools:text="2次"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">
            <Button
                android:id="@+id/bt_record_details"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:padding="0dp"
                android:layout_gravity="end"
                android:textSize="12sp"
                android:background="@drawable/selected_state_bt"
                android:text="@string/record_details_button"/>
        </LinearLayout>
    </LinearLayout>


</android.support.v7.widget.CardView>