<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_record_details_toolbar"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="?actionBarSize">
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/record_details_title_top_left"/>
                <TextView
                    android:id="@+id/sum_record"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    tools:text="105次"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/record_details_title_top_right"/>
                <TextView
                    android:id="@+id/consume_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="50"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/record_details_title_bottom_left"/>
                <TextView
                    android:id="@+id/queqin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="18"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/record_details_title_bottom_center"/>
                <TextView
                    android:id="@+id/chidao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="21"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/record_details_title_bottom_right"/>
                <TextView
                    android:id="@+id/qinjia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="18"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_record_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">
    </android.support.v7.widget.RecyclerView>
</LinearLayout>
