<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools">
    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_record_class_details_toolbar"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="?actionBarSize">
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="end"
                android:textSize="18sp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/class_details_top"/>
            <TextView
                android:id="@+id/text_class_details_number"
                android:layout_width="0dp"
                android:gravity="start"
                android:textSize="18sp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                tools:text="66"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/record_details_bottom_left"/>
            <TextView
                android:id="@+id/textchuqin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                tools:text="105"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/record_details_bottom_left_center"/>
            <TextView
                android:id="@+id/textqueqin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="50"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/record_details_bottom_right_center"/>
            <TextView
                android:id="@+id/textchidao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                tools:text="15次"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/record_details_bottom_right"/>
            <TextView
                android:id="@+id/textqinjia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="23"/>
        </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.design.widget.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
</LinearLayout>