<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_student_details_toolbar"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="?actionBarSize">
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:layout_height="0dp"
        android:layout_weight="1">
        <FrameLayout
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_gravity="center">
            <com.example.shinelon.lianqin.customview.RectImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"/>
            <ImageView
                android:id="@+id/student_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:padding="2dp"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_margin="5dp"
                android:layout_marginTop="20dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="学号：" />
            <TextView
                android:id="@+id/student_id"
                android:layout_margin="5dp"
                android:layout_marginTop="20dp"
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:layout_height="wrap_content"
                android:gravity="start"
                tools:text="2015000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_margin="5dp"
                android:layout_marginTop="20dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="班级：" />
            <TextView
                android:id="@+id/student_major"
                android:layout_margin="5dp"
                android:layout_marginTop="20dp"
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:layout_height="wrap_content"
                android:gravity="start"
                tools:text="15医学信息工程" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/record_details_bottom_left_center"/>
                <TextView
                    android:id="@+id/student_queqin"
                    android:layout_width="wrap_content"
                    android:gravity="start"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/record_details_bottom_right_center"/>
                <TextView
                    android:id="@+id/student_chidao"
                    android:layout_width="wrap_content"
                    android:gravity="start"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/record_details_bottom_right"/>
                <TextView
                    android:id="@+id/student_qinjia"
                    android:layout_width="wrap_content"
                    android:gravity="start"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/record_details_bottom_left"/>
                <TextView
                    android:id="@+id/student_chuqin"
                    android:layout_width="wrap_content"
                    android:gravity="start"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_student"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

</LinearLayout>